[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/UI/menu_button.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/menu_button_press.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MenuScreen/Background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://Sounds/GameSounds/MC_Menu_Select.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/ArcadeClassic.ttf"

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = SubResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "Fade-Out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Main"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayButton/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("QuitButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitButton/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayButton/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("QuitButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitButton/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 352, -320 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayButton/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("QuitButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("QuitButton/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 352, -320 ), Vector2( 352, 80 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/ArcadeClassic.ttf"

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = SubResource( 3 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
scale = Vector2( 2.15, 2.3 )
texture = ExtResource( 3 )
centered = false

[node name="PlayButton" type="TextureButton" parent="."]
visible = false
margin_left = 464.0
margin_top = 344.0
margin_right = 560.0
margin_bottom = 384.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="PlayButton"]
visible = false
margin_left = 16.0
margin_right = 80.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "play"
align = 1
valign = 1

[node name="ButtonSound" type="AudioStreamPlayer" parent="PlayButton"]
stream = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="."]
visible = false
margin_left = 464.0
margin_top = 400.0
margin_right = 560.0
margin_bottom = 440.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="Label" type="Label" parent="QuitButton"]
visible = false
margin_left = 19.0
margin_right = 83.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="."]
anims/Fade-Out = SubResource( 5 )
anims/Main = SubResource( 6 )
anims/RESET = SubResource( 8 )
anims/Start = SubResource( 7 )

[node name="audio" type="AudioStreamPlayer" parent="."]

[node name="Title" type="Label" parent="."]
margin_left = 352.0
margin_top = -320.0
margin_right = 682.0
margin_bottom = -117.0
custom_colors/font_color_shadow = Color( 0.54902, 0.00392157, 1, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 4 )
text = "RPG"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1056.0
margin_bottom = 680.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
